# untangle

./: .gitignore  BUILD.md  CHANGELOG.md  Evolution.md  GLOSSARY.md  INSTALL.md  Makefile.am  README.md  _config.yml  baseexplain.h  basetree.h  beval.cc  bexplain.cc  bextract.cc  bfold.cc  bjoin.cc  bload.cc  bsave.cc  bsystem.cc  build7bitCount.cc  build9bit.cc  build9bitAdder.cc  build9bitTable.cc  buildaes.cc  buildaes.h  buildaesbox.h  builddes.cc  builddes.h  builddesbox.h  buildmd5.cc  buildmd5.h  buildspongent.cc  buildspongent.h  buildspongentbox.h  buildtest0.cc  bvalidate.cc  configure.ac  context.h  database.h  datadef.h  (+69 more)
.github/: FUNDING.yml
_data/: home.yml
jekyll/: README.md  _config.yml
jekyll/_posts/: 2020-01-19-welcome-to-jekyll.markdown  2020-01-20-glossary.md  2020-01-21-QTF-operator.md  2020-03-05-QTF-operator.md  2020-03-10-level2-normalisation.md
